<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.popquiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/pop_quiz" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/first_question"
            android:textAppearance="@style/CodeFont" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp">

            <RadioButton
                android:id="@+id/first_q_first_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_q_first_answer" />

            <RadioButton
                android:id="@+id/first_q_second_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_q_second_answer" />

            <RadioButton
                android:id="@+id/first_q_third_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_q_third_answer" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="18dp"
            android:text="@string/second_question"
            android:textAppearance="@style/CodeFont" />

        <CheckBox
            android:id="@+id/second_q_first_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:text="@string/second_q_first_answer" />

        <CheckBox
            android:id="@+id/second_q_second_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:text="@string/second_q_second_answer" />

        <CheckBox
            android:id="@+id/second_q_third_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:text="@string/second_q_third_answer" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="18dp"
                android:text="@string/third_question"
                android:textAppearance="@style/CodeFont" />

            <EditText
                android:id="@+id/third_q_lyrics_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:hint="Type lyrics here"
                android:inputType="text"
                android:textSize="15sp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="18dp"
            android:text="@string/fourth_question"
            android:textAppearance="@style/CodeFont" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp">

            <RadioButton
                android:id="@+id/fourth_q_first_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fourth_q_first_answer" />

            <RadioButton
                android:id="@+id/fourth_q_second_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fourth_q_second_answer" />

            <RadioButton
                android:id="@+id/fourth_q_third_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fourth_q_third_answer" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="18dp"
            android:text="@string/fifth_question"
            android:textAppearance="@style/CodeFont" />

        <CheckBox
            android:id="@+id/fifth_q_first_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:text="@string/fifth_q_first_answer" />

        <CheckBox
            android:id="@+id/fifth_q_second_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:text="@string/fifth_q_second_answer" />

        <CheckBox
            android:id="@+id/fifth_q_third_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:text="@string/fifth_q_third_answer" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:background="@color/colorAccent"
            android:onClick="Submit"
            android:text="Submit"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>